--- a/eks-deploy-k8s.yaml
+++ b/eks-deploy-k8s.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: my-springboot-app
-        image: 657693961122.dkr.ecr.ap-south-1.amazonaws.com/my-docker-repo:latest
+        image: 657693961122.dkr.ecr.ap-south-1.amazonaws.com/my-docker-repo
         imagePullPolicy: Always
         ports:
         - containerPort: 8085
